--- a/my-portfolio/src/components/Footer.css
+++ b/my-portfolio/src/components/Footer.css
@@ -13,7 +13,7 @@
   flex-wrap: wrap;
 }
 
-/* Navigation Links */
+/* Navigation Links ahoy */
 .footer-links a {
   margin-left: 5rem;
   color: #ffffff;
